manifests/apps/app02/services.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app02
  labels:
    name: app02
    istio-injection: enabled
---
apiVersion: v1
kind: Service
metadata:
  name: service-a
  namespace: app02
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: service-a
---

apiVersion: v1
kind: Pod
metadata:
  namespace: app02
  labels:
    app: service-a
  name: service-a
spec:
  volumes:
  - name: service-a-cm
    configMap:
      name: service-a-cm
  containers:
  - image: nginx
    name: service-a
    volumeMounts:
    - name: service-a-cm
      mountPath: /usr/share/nginx/html/
    ports:
    - containerPort: 80
    resources:
      limits:
        cpu: 100m
        memory: 200M
      requests:
        cpu: 10m
        memory: 50M
---
apiVersion: v1
kind: Service
metadata:
  namespace: app02
  name: service-b
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: service-b
---
apiVersion: v1
kind: Pod
metadata:
  namespace: app02
  labels:
    app: service-b
  name: service-b
spec:
  volumes:
  - name: service-b-cm
    configMap:
      name: service-b-cm
  containers:
  - image: nginx
    name: service-b
    volumeMounts:
    - name: service-b-cm
      mountPath: /usr/share/nginx/html/
    ports:
    - containerPort: 80
    resources:
      limits:
        cpu: 100m
        memory: 200M
      requests:
        cpu: 10m
        memory: 50M
---
